RESOLVED FIXED187862
[WinCairo] Fix detection of held modifier keys for key events
https://bugs.webkit.org/show_bug.cgi?id=187862
Summary [WinCairo] Fix detection of held modifier keys for key events
Stephan Szabo
Reported 2018-07-20 10:29:28 PDT
[WinCairo] Fix detection of held modifier keys for key events
Attachments
Use requested key in IsKeyInDownState (1.17 KB, patch)
2018-07-20 10:47 PDT, Stephan Szabo
no flags
Archive of layout-test-results from ews206 for win-future (13.04 MB, application/zip)
2018-07-21 02:24 PDT, EWS Watchlist
no flags
Stephan Szabo
Comment 1 2018-07-20 10:47:22 PDT
We were always checking VK_MENU when checking if IsKeyInDownState rather than the requested modifier.
Stephan Szabo
Comment 2 2018-07-20 10:47:55 PDT
Created attachment 345460 [details] Use requested key in IsKeyInDownState
EWS Watchlist
Comment 3 2018-07-21 02:24:01 PDT
Comment on attachment 345460 [details] Use requested key in IsKeyInDownState Attachment 345460 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8607279 New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 4 2018-07-21 02:24:12 PDT
Created attachment 345508 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Stephan Szabo
Comment 5 2018-07-23 10:25:53 PDT
Win bot appears to be failing both with and without the patch with similar results.
WebKit Commit Bot
Comment 6 2018-07-23 10:52:39 PDT
Comment on attachment 345460 [details] Use requested key in IsKeyInDownState Clearing flags on attachment: 345460 Committed r234103: <https://trac.webkit.org/changeset/234103>
WebKit Commit Bot
Comment 7 2018-07-23 10:52:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-07-23 10:54:11 PDT
Note You need to log in before you can comment on or make changes to this bug.