[WinCairo] Fix detection of held modifier keys for key events https://bugs.webkit.org/show_bug.cgi?id=187862

Reviewed by Fujii Hironori.

* Shared/win/WebEventFactory.cpp:
(WebKit::IsKeyInDownState): Use requested modifier not VK_MENU


Canonical link: https://commits.webkit.org/203083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234103 268f45cc-cd09-0410-ab3c-d52691b4dbfc